slight changes made

--- a/car_rental/templates/car_rental/vehicle_list.html
+++ b/car_rental/templates/car_rental/vehicle_list.html
@@ -22,7 +22,7 @@
         <li class="list-group-item">Year: {{ vehicle.year }}</li>
         <li class="list-group-item">Price: ${{ vehicle.price }} /per day</li> 
           {% if vehicle.avg_rating %}
-        <li>Average rating: {{ vehicle.avg_rating }}</li>
+        <li class="list-group-item">Average rating: {{ vehicle.avg_rating }}</li>
         {% endif %}
       </ul>
     </div>
