a slight change made

--- a/car_rental/templates/car_rental/vehicle_detail.html
+++ b/car_rental/templates/car_rental/vehicle_detail.html
@@ -41,4 +41,5 @@
     <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
     <a href="{% url 'login' %}" class="btn btn-primary">Log In</a>
     {% endif %}
+  {% endif %}
 {% endblock %}
