some files edited

--- a/car_rental/templates/car_rental/complaint_detail.html
+++ b/car_rental/templates/car_rental/complaint_detail.html
@@ -4,15 +4,17 @@
   <h2>Complaint Details</h2>
   <hr>
   <h6>Complaint by: {{ complaint.user.username }}</h6>
+  <p>Date Created: {{ complaint.created_at }}<p>
+  {% if complaint.vehicle %}
   <p>Vehicle: {{ complaint.vehicle.name }}</p>
+  {% endif %}
   <p>Status: {{ complaint.status }}<p>
   <p>Complaint Description:</p>
   <p>{{ complaint.description }}</p>
   {% if complaint.reply %}
     <p><strong>Reply:</strong> {{ complaint.reply }}</p>
     {% endif %}
-  <p>Date Created: {{ complaint.created_at }}<p>
-  <p>Last Updated: {{ complaint.updated_at }}<p>
+  
   {% if user.is_superuser or user.is_staff%}
   <a href="{% url 'complaint_update' complaint.pk %}" class="btn btn-secondary">Update Status</a>
   {% endif %}
