--- a/car_rental/templates/base.html
+++ b/car_rental/templates/base.html
@@ -33,15 +33,27 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'rental_request_list' %}">Requests</a>
                     </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'complaint_list' %}">Complaints</a>
                     </li>
                     {% if user.is_superuser or user.is_staff%}
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'rental_return_list' %}">Returns</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'vehicle_create' %}">Create Vehicle</a>
                     </li>
                     {% endif %}
+                    {% if user.is_authenticated and not user.is_staff %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'complaint_create' %}">Drop your complaints</a>
+                    </li>
+                    {% endif %}
                     {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                    </li>
                         <li class="nav-item">
                             <form method="post" action="{% url 'logout' %}" class="d-inline">
                                 {% csrf_token %}
