--- a/car_rental/templates/car_rental/rental_request_list.html
+++ b/car_rental/templates/car_rental/rental_request_list.html
@@ -5,7 +5,7 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        
         <th scope="col">Vehicle</th>
         
         <th scope="col">Status</th>
@@ -19,15 +19,14 @@
     <tbody>
       {% for rental_request in rental_requests %}
         <tr>
-          <th scope="row">{{ rental_request.id }}</th>
+          
           <td>{{ rental_request.vehicle.name }}</td>
           
-          <td>{{ rental_request.status }}</td>
+          <td>{{ rental_request.get_status_display }}</td>
           {% if request.user.is_staff %}
             <td>{{ rental_request.user.username }}</td>
           {% endif %}
           <td><a href="{% url 'rental_request_detail' rental_request.id %}">Detail</a></td>
-          
         </tr>
       {% empty %}
         <tr>
