--- a/car_rental/templates/car_rental/vehicle_detail.html
+++ b/car_rental/templates/car_rental/vehicle_detail.html
@@ -33,12 +33,12 @@
     {% else %}
       <p>No ratings yet.</p>
     {% endif %}
-    {% if user.is_authenticated and not user.is_superuser or user.is_staff %}
-    <p><a href="{% url 'vehicle_rating_create' vehicle.id %}" class="btn btn-primary">Rate this vehicle</a></p>
-    <p><a href="{% url 'rental_request_create' vehicle.id %}" class="btn btn-primary">Rent this vehicle</a></p>
-    {% else %}
+    {% if user.is_authenticated and not user.is_staff %}
+    <a href="{% url 'vehicle_rating_create' vehicle.id %}" class="btn btn-primary">Rate this vehicle</a>
+    <a href="{% url 'rental_request_create' vehicle.id %}" class="btn btn-primary">Rent this vehicle</a>
+    {% elif not user.is_authenticated %}
     <p>You must be registered and logged in order to use our service</p>
-    <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
+    <a href="{% url 'signup' %}" class="btn btn-primary">Register</a>
     <a href="{% url 'login' %}" class="btn btn-primary">Log In</a>
     {% endif %}
   {% endif %}
